testsuite/tests/polykinds/T8132.stderr

T8132.hs:7:10: error:
    • Class ‘Typeable’ does not support user-specified instances.
    • In the instance declaration for ‘Typeable K’
